API Albums controller
